--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,11 +6,13 @@ WORKDIR /app
 # Copy the virtual environment and requirements file
 COPY ./pixie_env/ ./pixie_env/
 COPY requirements.txt .
-COPY ./src/ ./src/
+
 
 # Install the dependencies
 RUN pip install -r requirements.txt
+COPY ./src/ ./src/
 
+ENV FLASK_APP=src/app.py
 EXPOSE 3000
-# Run the Flask app
-CMD ["python", "app.py"]
+CMD ["flask", "run", "--host=0.0.0.0", "--port=3000"]
+# CMD ["python", "src/app.py"]
