--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,26 +1,41 @@
-aiodataloader==0.4.0
 alembic==1.13.2
-aniso8601==9.0.1
+anyio==4.4.0
+ariadne==0.23.0
+asgiref==3.8.1
+attrs==23.2.0
+autobahn==23.6.2
+Automat==22.10.0
 blinker==1.8.2
+cffi==1.16.0
 click==8.1.7
+constantly==23.10.4
+cryptography==42.0.8
+exceptiongroup==1.2.2
 Flask==3.0.3
-Flask-GraphQL==2.0.0
 Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
-graphene==3.3
-graphene-sqlalchemy==3.0.0rc1
 graphql-core==3.2.3
-graphql-relay==3.2.0
-graphql-server-core==1.1.1
 greenlet==3.0.3
+hyperlink==21.0.0
+idna==3.7
+incremental==22.10.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.5
 MarkupSafe==2.1.5
-promise==2.3
 psycopg2-binary==2.9.9
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
+pyOpenSSL==24.1.0
 python-dotenv==1.0.1
+service-identity==24.1.0
 six==1.16.0
+sniffio==1.3.1
 SQLAlchemy==2.0.31
+starlette==0.37.2
+Twisted==24.3.0
+txaio==23.1.1
 typing_extensions==4.12.2
 Werkzeug==3.0.3
+zope.interface==6.4.post2
