--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,41 +1,54 @@
-alembic==1.13.2
+aerich==0.7.2
+aioredis==2.0.1
+aiosqlite==0.17.0
+annotated-types==0.7.0
 anyio==4.4.0
 ariadne==0.23.0
-asgiref==3.8.1
-attrs==23.2.0
-autobahn==23.6.2
-Automat==22.10.0
-blinker==1.8.2
-cffi==1.16.0
+ariadne-graphql-modules==0.8.0
+async-timeout==4.0.3
+asyncpg==0.29.0
+bcrypt==4.2.0
+certifi==2024.7.4
 click==8.1.7
-constantly==23.10.4
-cryptography==42.0.8
+dictdiffer==0.9.0
+dnspython==2.6.1
+email_validator==2.2.0
 exceptiongroup==1.2.2
-Flask==3.0.3
-Flask-Migrate==4.0.7
-Flask-SQLAlchemy==3.1.1
+fastapi==0.111.1
+fastapi-cli==0.0.4
+fastapi-sessions==0.3.2
 graphql-core==3.2.3
 greenlet==3.0.3
-hyperlink==21.0.0
+h11==0.14.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
 idna==3.7
-incremental==22.10.0
+iso8601==1.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
-Mako==1.3.5
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+mdurl==0.1.2
 psycopg2-binary==2.9.9
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
-pycparser==2.22
-pyOpenSSL==24.1.0
+pydantic==2.8.2
+pydantic_core==2.20.1
+Pygments==2.18.0
+pypika-tortoise==0.1.6
 python-dotenv==1.0.1
-service-identity==24.1.0
-six==1.16.0
+python-multipart==0.0.9
+pytz==2024.1
+PyYAML==6.0.1
+redis==5.0.7
+rich==13.7.1
+shellingham==1.5.4
 sniffio==1.3.1
-SQLAlchemy==2.0.31
 starlette==0.37.2
-Twisted==24.3.0
-txaio==23.1.1
+tomlkit==0.13.0
+tortoise-orm==0.21.5
+typer==0.12.3
 typing_extensions==4.12.2
-Werkzeug==3.0.3
-zope.interface==6.4.post2
+uvicorn==0.30.3
+uvloop==0.19.0
+watchfiles==0.22.0
+websockets==12.0
